# sqlfmt-rust

./: Cargo.toml  LICENSE  Makefile  NOTICE  README.md
.cargo/: config.toml
.claude/skills/review-rust-code/: SKILL.md  examples.md
.claude/skills/rust-perf-skill/: SKILL.md
.github/workflows/: ci.yml  release.yml
benches/: format_bench.rs
examples/: profile.rs
src/: action.rs  analyzer.rs  api.rs  comment.rs  config.rs  dialect.rs  error.rs  formatter.rs  jinja_formatter.rs  lexer.rs  lib.rs  line.rs  main.rs  merger.rs  mode.rs  node.rs  node_manager.rs  operator_precedence.rs  query.rs  report.rs  rule.rs  segment.rs  splitter.rs  string_utils.rs  token.rs
src/rules/: common.rs  core.rs  mod.rs
tests/: cli_test.rs  golden_test.rs  integration_test.rs
tests/data/: LICENSE
tests/data/errors/: 900_bad_token.sql
tests/data/preformatted/: 002_select_from_where.sql  003_literals.sql  004_with_select.sql  008_reserved_names.sql  301_multiline_jinjafmt.sql  302_jinjafmt_multiline_str.sql
tests/data/unformatted/: 100_select_case.sql  101_multiline.sql  102_lots_of_comments.sql  103_window_functions.sql  104_joins.sql  105_fmt_off.sql  106_leading_commas.sql  107_jinja_blocks.sql  109_lateral_flatten.sql  110_other_identifiers.sql  111_chained_boolean_between.sql  112_semicolons.sql  113_utils_group_by.sql  114_unions.sql  115_select_star_except.sql  117_whitespace_in_tokens.sql  118_within_group.sql  119_psycopg_placeholders.sql  120_array_literals.sql  121_stubborn_merge_edge_cases.sql  122_values.sql  123_spark_keywords.sql  124_bq_compound_types.sql  125_numeric_literals.sql  126_blank_lines.sql  127_more_comments.sql  129_duckdb_joins.sql  130_athena_data_types.sql  131_assignment_statement.sql  135_star_columns.sql  (+32 more)
tests/fixtures/: complex_case.sql  dbt_deeply_nested.sql  dbt_pharmacy_panels.sql  duckdb_query.sql  jinja_template.sql  multiple_statements.sql  snowflake_query.sql  unformatted.sql
(+2 files in other folders)
